News UAT/force-app/main/default/objects/Account_Services_Rel__c/Account_Services_Rel__c.object-meta.xml
<CustomObject>
    <description>Account to Account &#39;Junction&#39;  Object for the Serviced By and Services relationship between Customer Accounts</description>
    <label>Account Services Relationship</label>
    <nameField>
        <displayFormat>ASR-{00000}</displayFormat>
        <label>Account Services Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Services Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>