News UAT/force-app/main/default/objects/Account_Services_Rel__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>The direction is always [A] Services [B]</description>
    <label>Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAYS on behalf of</fullName>
            </value>
            <value>
                <fullName>PLACES on behalf of</fullName>
            </value>
            <value>
                <fullName>is the Creative Agency for</fullName>
            </value>
            <value>
                <fullName>is the Media /Planning Agency</fullName>
                <label>is the Media / Planning Agency</label>
            </value>
            <value>
                <fullName>Provides Full Service (Pay, Place, Planning) for</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>