News UAT/force-app/main/default/objects/Account_Services_Rel__c/fields/Source_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Account_Name__c</fullName>
    <description>Name to display in the Related List</description>
    <formula>HYPERLINK(&quot;/&quot; + Source_Account__r.Id, Source_Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Account Name</label>
    <type>Text</type>
</CustomField>