News UAT/force-app/main/default/objects/Account_Services_Rel__c/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account being Serviced - i.e. the target Account or Business

E.g. in the relationship &#39;[A] is serviced by [B]&#39;, this is &#39;[B]&#39;</description>
    <inlineHelpText>The Account being Serviced - i.e. the target Account or Business</inlineHelpText>
    <label>Target Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>notEqual</operation>
            <value>Consortium</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Serviced By</relationshipLabel>
    <relationshipName>Account_Services_Relationships1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>