News UAT/force-app/main/default/objects/Account_Services_Rel__c/fields/Target_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_Name__c</fullName>
    <description>Display the name of the Other Account in Related List</description>
    <formula>HYPERLINK(&quot;/&quot; + Target_Account__r.Id, Target_Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Account Name</label>
    <type>Text</type>
</CustomField>